fix(profile): alignment of ic or passport in mobile mode

--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -91,7 +91,7 @@ h4 {
         font-size: 0.7rem;
       }
       .virtual-card-student-ids{
-        font-size: 0.7rem !important;
+        font-size: 0.68rem !important;
       }
     }
   }
